--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -5,7 +5,7 @@
 }
 .user-link{
     margin-top: 20px;
-    width: 10%;
+    width: 15%;
     display: flex;
     justify-content: space-between;
 }
@@ -14,15 +14,18 @@
     font-family: 'Lobster', cursive;
     color: aqua;
     margin-left: 10px;
+    font-size: 40px;
 }
 .logo-link{
     text-decoration-color: aqua;
 }
 .post-link{
+    font-size: 18px;
     text-decoration: none;
     color: aqua;
 }
 .signout-link{
+    font-size: 18px;
     color: aqua;
     cursor: pointer;
 }
