--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -4,8 +4,8 @@
     margin-right: 20px;
 }
 .user-link{
-    margin-top: 20px;
-    width: 15%;
+    margin-top: 40px;
+    width: 20%;
     display: flex;
     justify-content: space-between;
 }
@@ -18,6 +18,11 @@
 }
 .logo-link{
     text-decoration-color: aqua;
+}
+.shop-link{
+    font-size: 18px;
+    text-decoration: none;
+    color: aqua;
 }
 .post-link{
     font-size: 18px;
